--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="plugin/chalkboard/style.css">
   </head>
   <body>
-	<h1><a link="">Eu creio no Batismo</a></h1>
+	<h1><a href="/Dashboard/02%20-%20AREAS%20(PARA)/Presentations/Eu%20acredito%20no%20Batismo%20-%20Tabela/index.html">Eu creio no Batismo</a></h1>
   </body>
 
   <!-- created with Advanced Slides -->
