--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 	<br>
 	<h1><a href="https://dbotas91.github.io/Dashboard/02---AREAS-(PARA)/Presentations/Eu-acredito-no-Batismo---Tabela/index.html">Eu creio no Batismo</a></h1>
   	<br>
-	<h1><a href="https://github.com/dbotas91/Dashboard/blob/main/02%20-%20AREAS%20(PARA)/Presentations/Eu%20acredito%20no%20Batismo%20-%20Tabela/index.html">Eu crio no Batismo</a></h1>
+	<h1><a href="https://github.com/dbotas91/Dashboard/blob/main/02%20-%20AREAS%20(PARA)/Presentations/Eu%20acredito%20no%20Batismo%20-%20Tabela/index.html">Eu creio no Batismo</a></h1>
 	<br>
 	  <h1><a href="https://dbotas91.github.io/Dashboard/02%20-%20AREAS%20(PARA)/Presentations/Eu%20acredito%20no%20Batismo%20-%20Tabela/index.html">
-   Ver Apresentação: Eu acredito no Batismo
+   Ver Apresentação: Eu creio no Batismo
+</a></h1>
+	  <br>
+	  <h1><a href="https://dbotas91.github.io/Dashboard/02%20-%20AREAS%20(PARA)/Presentations/Eu%20acredito%20no%20Batismo%20-%20Tabela/">
+   Ver Apresentação: Eu creio no Batismo
 </a></h1>
   </body>
 
